--- a/source/sass/partials/_blog.scss
+++ b/source/sass/partials/_blog.scss
@@ -43,33 +43,22 @@ blockquote {
 	margin-left:15px;
 	padding-left:10px;
 	color:$dark;
-
-
-			@media screen and (max-width:em(500))
-			{
+		@media screen and (max-width:em(500)) {
 			font-size:em(14);
-			}
-
-
-		p:first-child:first-letter
-		{
+		}
+		p:first-child:first-letter {
 		float: none;
 		color: inherit;
 		font-size: inherit;
 		line-height: inherit;
 		padding: 0;
 		font-family:inherit;
-
-			@media screen and (max-width:em(500))
-			{
+			@media screen and (max-width:em(500)) {
 			font-size: inherit;
 			}
-		}
+	}
 }
-.hidden-x
-{
-display:none !important;
-}
+.hidden-x { display:none !important; }
 h3 {
 	font-family:$sans;
 	font-size:em(18);
@@ -104,7 +93,6 @@ h3 {
 	right:0;
 	margin:auto;
 }
-
 .blog-entry-block{
 	a { color:$body;
 		&:hover {
@@ -149,262 +137,162 @@ h3 {
 	animation: buttonHover 1.5s infinite cubic-bezier(.49,.49,.65,1);
 	cursor:pointer;
 	animation-delay: 1.5s;
-	top:rem(80);
-		@media screen and (max-width:em(750)) {
-		top:rem(60);
+	top:rem(90);
+		@media screen and (max-width:em(700)) {
+		top:rem(70);
 		}
-
+		@media screen and (max-width:em(560)) {
+		top:rem(97);
+		}
 }
 .blog-tags {
-		@media screen and (max-width:em(730)) {padding:0 20px;}
-		@media screen and (max-width:em(500))
-		{
-		padding:0 10px;
-		}
-
-		li
-		{
+		@media screen and (max-width:em(730)) { padding:0 20px;}
+		@media screen and (max-width:em(500)) {
+		padding:0 10px; }
+		li {
 		font-family:$sans;
 		font-size:em(12);
 		letter-spacing:.04em;
 		display:inline-block;
 		font-weight:700;
 		margin:0 0 0px 0;
-
-
-			a
-			{
-			color:$aqua;
-
-				&:hover
-				{
-				color:$dark_aqua;
-				}
-
-			}
-
-
-			&:before
-			{
-			content:' | ';
-			display:inline-block;
-			color:$med;
-			margin:0 5px 0 0;
-			}
-
-			&:nth-child(1)
-			{
-
-			&:before
-			{
-			content:'';
-			display:none;
-			}
-			}
-
+			a { color:$aqua;
+				&:hover { color:$dark_aqua; }
 		}
-	}
-
+			&:before {
+				content:' | ';
+				display:inline-block;
+				color:$med;
+				margin:0 5px 0 0;
+			}
+			&:nth-child(1) {
+				&:before {
+					content:'';
+					display:none;
+				}
+			}
+		}
+}
 .blog-related-links-list
 	{
 	padding:20px 0 0 0;
-
-	li
-	{
+	li {
 	font-family:$sans;
 	text-align:center;
 	line-height:150%;
 	padding:0 0 10px 0;
 	font-size:em(14);
-		a
-		{
-		color:$aqua;
-			&:hover
-			{
-			color:$dark_aqua;
-			}
-
+		a { color:$aqua;
+			&:hover { color:$dark_aqua;}
 		}
-
 	}
+}
+.blog-related-links-label	{ color:$med; }
 
-	}
-
-.blog-related-links-label
-	{
-	color:$med;
-	}
-
-
-.blog-pullquote
-	{
+.blog-pullquote {
 	@include spanner_too (3, 700, 0, 1);
 	margin:10px 0 30px 30px;
 	float:right;
 	border-bottom:3px solid $aqua;
 	padding:0 0 8px 0;
-
-
-	@media screen and (max-width:em(700))
-	{
+	@media screen and (max-width:em(700)) {
 	@include spanner_too (3, 700, 0, 1.5);
 	}
-
-	@media screen and (max-width:em(500))
-	{
+	@media screen and (max-width:em(500)) {
 	@include spanner_too (3, 700, 0, 3);
 	margin:0 0 30px 0;
 	}
-
-	&:after
-	{
-	content:' \201C \20 \201D ';
-	display:block;
-	width:45px;
-	background-color:white;
-	margin:0 auto -18px;
-	text-align:center;
-	font-size:em(30);
-	line-height:em(14);
-	height:14px;
-	padding:3px 0 0 0;
-	color:$aqua;
-
+	&:after {
+		content:' \201C \20 \201D ';
+		display:block;
+		width:45px;
+		background-color:white;
+		margin:0 auto -18px;
+		text-align:center;
+		font-size:em(30);
+		line-height:em(14);
+		height:14px;
+		padding:3px 0 0 0;
+		color:$aqua;
 	}
 
-	q
-	{
-	font-size:em(18);
-	color:$med;
-	font-family:$sans;
-	line-height:160%;
-	quotes: "“" "”" "‘" "’";
-
-	@media screen and (max-width:em(550))
-	{
-	font-size:em(16);
-	}
-
-
-	}
-
-	}
-
-.content-nav
-	{
-	text-align:center;
-		li
-		{
-		display:inline-block;
+	q {
+		font-size:em(18);
+		color:$med;
 		font-family:$sans;
-		font-size:em(14);
-
-				@media screen and (max-width:em(400))
-				{
-				display:block;
-				margin:0 0 12px 0;
-				}
-
-		&:after
-			{
-			content:' | ';
-			color:$med;
+		line-height:160%;
+		quotes: "“" "”" "‘" "’";
+			@media screen and (max-width:em(550)) {
+			font-size:em(16);
+			}
+	}
+}
+.content-nav {
+	text-align:center;
+		li {
 			display:inline-block;
-			margin:0 8px;
-			font-family:$serif;
+			font-family:$sans;
+			font-size:em(14);
+				@media screen and (max-width:em(400)) {
+					display:block;
+					margin:0 0 12px 0;
+				}
+		&:after {
+				content:' | ';
+				color:$med;
+				display:inline-block;
+				margin:0 8px;
+				font-family:$serif;
 			}
-
-		&:nth-child(3)
-		{
-		&:after
-			{
-			content:'';
-			}
-
+		&:nth-child(3) {
+		&:after	{ content:'';}
 		}
-
-		}
-
 	}
-
-.blog-image
-	{
-	width:100%;
-	margin:0px;
-	padding:0px;
-	margin:0 auto 30px;
-	position:relative;
-
-
-	img
-	{
-	width:100%;
-	}
-
-
-	}
-
-code
-	{
-	padding:20px;
-	display:block;
-	line-height:160%;
+}
+code {
+	display:inline;
 	background-color:$haze;
-	margin:0 0 15px;
 	font-size:em(18);
-	overflow-x: scroll;
-	overflow-y: hidden;
-	position:relative;
+	padding:0px rem(5);
+}
+pre {
+	code {
+			display:block;
+			padding:20px;
+			line-height:160%;
+			margin:0 0 15px;
+			overflow-x: scroll;
+			overflow-y: hidden;
+			position:relative;
 	}
-
-
-.blog-signiture
-	{
+}
+.blog-signiture {
 	width:100%;
 	margin:20px 0 20px 0;
 	padding:10px 0 0 0;
 	border-top:1px solid $light;
-
-
-				@media screen and (max-width:em(750))
-				{
-				padding:10px 15px;
-				}
-
-	}
-
-.blog-mugshot
-	{
+		@media screen and (max-width:em(750)) {
+		padding:10px 15px;
+		}
+}
+.blog-mugshot {
 	width:em(60);
 	height:em(60);
 	border-radius:50%;
 	float:left;
 	margin:0 15px 0 0;
 	overflow:hidden;
-
-
-				@media screen and (max-width:em(600))
-				{
-				width:em(40);
-				height:em(40);
-				}
-
-
-				img
-				{
-				width:100%;
-				}
-
-	}
-
-.blog-signiture-text
-	{
+		@media screen and (max-width:em(600)) {
+		width:em(40);
+		height:em(40);
+		}
+		img { width:100%;}
+}
+.blog-signiture-text {
 	font-size:em(14);
 	color:$med;
 	font-style:italic;
-	}
-
-
+}
 .embed-container {
 	position: relative;
 	padding-bottom: 56.25%;
@@ -413,25 +301,21 @@ code
 	overflow: hidden;
 	max-width: 100% !important;
 	width:80%;
-
-		@media screen and (max-width:em(450))
-		{
-		width:90%;
+		@media screen and (max-width:em(450))	{
+			width:90%;
 		}
-	}
-
+}
 .embed-container iframe, .embed-container object, .embed-container embed {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	}
+}
 .blog-embed-image	{
 	display:block;
 	width:100%;
 	margin:rem(30) 0;
-
 	.full-width {
 		width:100%;
 		max-width:rem(650);
@@ -442,7 +326,6 @@ code
 		max-width:rem(350);
 		margin:0 auto;
 	}
-
 }
 .scroll-progress-wrapper {
 	width:100%;
@@ -453,7 +336,6 @@ code
 	left:0;
 	right:0;
 	height:2px;
-
 		.scroll-progress {
 			position:absolute;
 			height:2px;
